--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,9 @@
 html,
 body {
+  width: 100%;
+  height: 100%;
   padding: 0;
+  background-color: #021e33;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -16,13 +19,13 @@ a {
 }
 
 .container {
-  background-color: #021e33;
   height: 100%;
   width: 100%;
 }
-
-.charts-container {
-  display: flex;
+@media only screen and (min-width: 1440px) {
+  .charts-container {
+    display: flex;
+  }
 }
 
 .charts-container-title {
